Fix some minor problems, add user guide and Ui.png